# netspeak4-application-ngrams

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  netspeak4-application-cpp.pri  netspeak4-application-cpp.pro
.github/workflows/: make.yml
conf/: NetspeakInternal.proto  NetspeakMessages.proto  NetspeakService.proto  Netspeak_old.proto  doxygen.conf
conf/grammar/: .gitignore  Query.g4  lexerGrammar.g4
doc/: corpus-notes.txt  corpus-readme.txt
docker/: Dockerfile  README.md  publish-to-dockerhub.sh
grpcwebproxy/: Dockerfile  README.md  publish-to-dockerhub.sh
src/: CommandLineTool.cpp  PythonBindings.cpp
src/antlr4/: ProxyListener.cpp  ProxyListener.hpp  QueryComplexityMeasureListener.cpp  QueryComplexityMeasureListener.hpp  QueryErrorHandler.cpp  QueryErrorHandler.hpp  QueryLengthVerifier.cpp  QueryLengthVerifier.hpp  QueryNormListener.cpp  QueryNormListener.hpp  RawQueryListener.cpp  RawQueryListener.hpp  parse.cpp  parse.hpp  standardMethodsAndValues.hpp
src/cli/: BuildCommand.cpp  BuildCommand.hpp  Command.hpp  Commands.cpp  Commands.hpp  ProxyCommand.cpp  ProxyCommand.hpp  RegexCommand.cpp  RegexCommand.hpp  ServeCommand.cpp  ServeCommand.hpp  ShellCommand.cpp  ShellCommand.hpp  StressCommand.cpp  StressCommand.hpp  logging.cpp  logging.hpp  util.cpp  util.hpp
src/netspeak/: Configuration.cpp  Configuration.hpp  Configurations.cpp  Configurations.hpp  Dictionaries.cpp  Dictionaries.hpp  LfuCache.hpp  Netspeak.cpp  Netspeak.hpp  NetspeakRS3.hpp  NetspeakServiceImpl.hpp  PhraseCorpus.cpp  PhraseCorpus.hpp  PhraseDictionary.hpp  PhraseFileParser.hpp  PhraseFileReader.hpp  Properties.cpp  Properties.hpp  QueryNormalizer.cpp  QueryNormalizer.hpp  QueryProcessor.hpp  RetrievalStrategy.hpp  RetrievalStrategy1.hpp  RetrievalStrategy2.hpp  RetrievalStrategy3.hpp  error.cpp  error.hpp  indexing.cpp  indexing.hpp  phrase_methods.cpp  phrase_methods.hpp  postprocessing.hpp  protobuf_utils.hpp  query_methods.cpp  query_methods.hpp  query_normalization.cpp  query_normalization.hpp  query_result_methods.cpp  query_result_methods.hpp  request_methods.cpp  (+3 more)
src/netspeak/bighashmap/: BigHashMap.hpp  Builder.hpp  CmphMap.hpp  ExternalMap.hpp  InternalMap.hpp
src/netspeak/internal/: LengthRange.cpp  LengthRange.hpp  NormQuery.cpp  NormQuery.hpp  Phrase.cpp  Phrase.hpp  PhraseRef.hpp  Query.cpp  Query.hpp  QuerySyntax.hpp  README.md  RawPhraseResult.hpp  RawRefResult.cpp  RawRefResult.hpp  RawResult.cpp  RawResult.hpp  SearchOptions.hpp  SearchResult.hpp  SimpleQuery.cpp  SimpleQuery.hpp  Words.cpp  Words.hpp  typedefs.hpp
src/netspeak/invertedindex/: ByteBuffer.cpp  ByteBuffer.hpp  Configuration.hpp  IndexStrategy.hpp  Indexer.hpp  InvertedFileReader.hpp  InvertedFileWriter.hpp  Iterator.hpp  ManagedIndexer.hpp  Postlist.hpp  PostlistBuilder.hpp  PostlistReader.hpp  PostlistSorter.hpp  Properties.cpp  Properties.hpp  RawIndexer.hpp  RawPostlist.hpp  RawSearcher.hpp  Record.hpp  RecordReader.hpp  Searcher.hpp  SortedInput.hpp  StorageReader.hpp  StorageWriter.hpp  UnsortedInput.hpp
src/netspeak/jni/: jni.h  jni_utils.cpp  jni_utils.hpp  org_netspeak_Netspeak.cpp  org_netspeak_Netspeak.h
src/netspeak/model/: LengthRange.cpp  LengthRange.hpp  NormQuery.cpp  NormQuery.hpp  Phrase.cpp  Phrase.hpp  Query.cpp  Query.hpp  QuerySyntax.hpp  README.md  RawPhraseResult.hpp  RawRefResult.cpp  RawRefResult.hpp  RawResult.cpp  RawResult.hpp  SearchOptions.hpp  SearchResult.hpp  SimpleQuery.cpp  SimpleQuery.hpp  Words.cpp  Words.hpp  typedefs.hpp
src/netspeak/regex/: DefaultRegexIndex.cpp  DefaultRegexIndex.hpp  README.md  RegexIndex.hpp  RegexQuery.cpp  RegexQuery.hpp  parsers.cpp  parsers.hpp
src/netspeak/service/: LoadBalanceProxy.cpp  LoadBalanceProxy.hpp  NetspeakService.grpc.pb.cc  NetspeakService.grpc.pb.h  NetspeakService.pb.cc  NetspeakService.pb.h  RequestLogger.cpp  RequestLogger.hpp  SingleInstance.hpp  UniqueMap.cpp  UniqueMap.hpp  tracking.cpp  tracking.hpp
src/netspeak/util/: ChainCutter.hpp  Config.cpp  Config.hpp  FileDescriptor.cpp  FileDescriptor.hpp  IdMap.hpp  JsonWriter.hpp  LfuCache.hpp  Math.hpp  Mut.hpp  PropertiesFormat.cpp  PropertiesFormat.hpp  README.md  StringIdMap.hpp  Vec.hpp  check.hpp  checksum.hpp  conversion.hpp  exception.hpp  glob.cpp  glob.hpp  logging.cpp  logging.hpp  memory.hpp  service.cpp  service.hpp  string.cpp  string.hpp  systemio.hpp  traceable_error.hpp
src/netspeak/value/: big_string.hpp  big_string_traits.hpp  pair.hpp  pair_traits.hpp  quadruple.hpp  quadruple_traits.hpp  quintuple.hpp  quintuple_traits.hpp  sextuple.hpp  sextuple_traits.hpp  string_traits.hpp  triple.hpp  triple_traits.hpp  value_traits.hpp
src/py/: QueryParser.cpp  QueryParser.hpp
test/data/: dictset.csv  regex_1k_lower.txt  test_Regex.txt
test/data/index_eng500k_ci/: README.md
test/data/index_eng500k_ci/phrase-corpus/txt/: phrases.1  phrases.2  phrases.3  phrases.4  phrases.5
test/data/index_eng500k_ci/phrase-dictionary/: map.idx  txt.0.idx  txt.0.keys.mph
test/data/index_eng500k_ci/phrase-index/: properties  table.txt
test/data/index_eng500k_ci/phrase-index/table/: map.idx  phrase-index.0.idx  phrase-index.0.keys.mph
test/data/index_eng500k_ci/postlist-index/: properties  table.txt
test/data/queries/: dictset_results.txt  regexwords_results.txt  searchoperators_results.txt  setoperators_results.txt  words_results.txt
test/netspeak/: ManagedDirectory.hpp  paths.hpp  runner.cpp  test_ChainCutter.cpp  test_LfuCache.cpp  test_Netspeak.cpp  test_PhraseCorpus.cpp  test_PropertiesFormat.cpp  test_QueryParser.cpp  test_normalization.cpp  test_normalization.hpp  test_parse.cpp  test_phrase.cpp  test_phrase_methods.cpp  test_postprocessing.cpp  test_query_methods.cpp  test_query_normalization.cpp  test_regex.cpp
test/netspeak/bighashmap/: test_big_hash_map.cpp  test_value_traits.cpp
test/netspeak/invertedindex/: test_Indexer.cpp  test_InvertedFileReader.cpp  test_ManagedIndexer.cpp  test_Postlist.cpp  test_PostlistReader.cpp  test_PostlistSorter.cpp  test_Record.cpp
test/py/: test.py
(+4 files in other folders)
